2024-04-28  Karl Berry  <karl@freefriends.org>

	* Makefile (copynext): more inclusions and exclusions when
	setting up next issue.

2024-04-14  Karl Berry  <karl@freefriends.org>

	* cover3.tex (\abovedifficultyskip): can increase slightly.

2024-04-13  Karl Berry  <karl@freefriends.org>

	* Makefile (deps): add tugboat.sty.
	(c3_target, c3_twopages): two-page c3 for 45:1.
	(cover1.pdf): depend on coverdrawing.pdf.
	($(tb)cmplete.lua): copy.
	($(tb)complete.tex): symlink.
	* cover1.tex: drawing (from garcia-metagraph).
	* cover2.tex: rates increased.
	* cover3.tex: quite overfull; use 9pt, smaller skips.
	* cover4.tex: use 9pt, smaller skips.
	* tubtocmac.tex (\tubplus): for Grail+ a la C++.
	* tugboat.front: press2.pdf, no need for crop.

2023-10-28  Karl Berry  <karl@freefriends.org>

	* cover2.tex: 2024 next year.
	* tugboat.front (\pressimage): new macro to insert printing press.
	(\TUBhead): call it.

2023-10-27  Karl Berry  <karl@freefriends.org>

	* toclinks.tex: rename from tbcomplete.tex.

	* cover1.tex: drawing for tb138 regular issue; generalize next time.
	* cover2.tex: add About the cover section.
	(Board of Directors): update per 2023 election.
	* cover3.tex: for tb138, can use 10pt fonts and normal spacing.

2023-09-06  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\tubmaybelinkpageno): call it.
	(\tubmaybelinktext): new macro to link any text.
	* tugboat.front (\newsubs@c): move new definition from cover4.tex
	to here, with pdf linking.
	(\subsec): also link the title (author \ifprocissue) arg.

2023-04-16  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\titleref, \booktitle): define as with ltugboat.sty.

2023-01-11  Karl Berry  <karl@freefriends.org>

	* tugboat.front (\sec): make \newline an alias for \\,
	since we're in an alignment. Make both definitions local
	to the \sec vbox.

2022-10-26  Karl Berry  <karl@freefriends.org>

	* tubtocmac.tex (\textbf): define.
	(\textsf): do not define, to catch package names we want in tt.
