@@ -1,3 +1,7 @@
+2024-05-06  Karl Berry  <karl@tug.org>
+
+	* Makefile (copynext): handle top-level issue dir too.
+
 2024-04-28  Karl Berry  <karl@freefriends.org>
 
 	* Makefile (copynext): more inclusions and exclusions when
